--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2017-03-14 v0.70
+- Add support for date format specification. It is used to construct
+  backup filename. See README.
+- Change for CLI arguments. The arguments no longer depends on order.
+- The BACKUP_TYPE option renamed to BACKUP_DST to more precisely reflect
+  it's purpose.
+- The SSH_PORT option renamed to REMOTE_PORT to group SSH related options.
+- Code refactoring
+
 2017-02-24 v0.69
 - Add support for bzip2 and xz compression types
 - The BACKUP_DIR variable is used for local and remote backup types now.
